fixed about title on smallest screens

--- a/src/sections/about.scss
+++ b/src/sections/about.scss
@@ -38,7 +38,7 @@
     font-weight: 600;
 
     @media (max-width: 768px) {
-      font-size: 36px;
+      font-size: 34px;
       justify-content: center;
     }
   }
